[FIX] mail : activity mark done buttons spacing with feedback textarea
Task #2243504

--- a/addons/mail/static/src/messaging/component/activity_mark_done_popover/activity_mark_done_popover.scss
+++ b/addons/mail/static/src/messaging/component/activity_mark_done_popover/activity_mark_done_popover.scss
@@ -13,6 +13,7 @@
     display: flex;
     flex: 1;
     justify-content: space-between;
+    margin-top: map-get($spacers, 2);
 }
 
 .o_ActivityMarkDonePopover_feedback {
